tests/paczka1/small_fuzzy/55235897.err
Error in line 1: yxRK3yx A191 21,1
Error in line 6: S578 Ac9c 78,c
Error in line 2: S578 S578 39,2
Error in line 7: S578 A191 296,0
Error in line 5: uujgAs7PJ S583 94,0
